fix height distortion in safari

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -193,6 +193,7 @@ pre {
 
 .img-circle-avatar {
   width: 100%;
+  max-height: 200px;
   max-width: 200px;
   border-radius: 50%;
 }
